--- a/0-DataIngestParsing/1-dataingestion.ipynb
+++ b/0-DataIngestParsing/1-dataingestion.ipynb
@@ -2,12 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import langchain"
+    "import os\n",
+    "from typing import List, Dict, Any\n",
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.documents import Document\n",
+    "from langchain_text_splitters import(\n",
+    "    RecursiveCharacterTextSplitter,\n",
+    "    CharacterTextSplitter,\n",
+    "    TokenTextSplitter\n",
+    ")\n",
+    "\n",
+    "print(\"Setup complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Understand doc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Understand doc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
